# buildathon-60min-2026

./: .gcloudignore  .gitignore  README.md  run-local.sh
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
backend/tests/: test_core.py
data/: demo_cases.json
docs/: draft-prd.md  prd-v1.md  problem.md
frontend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/public/: config.js
frontend/src/: main.jsx  styles.css
scripts/: build-images.sh  create-gemini-secret.sh  deploy-cloud-run.sh
terraform/: README.md
