[project]
name = "backend"
version = "0.1.0"
description = "Sentinel Health demo backend for triage, sync, and outbreak alerts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "google-cloud-bigquery",
    "python-multipart",
    "pytest",
    "uvicorn[standard]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
